force-app/main/default/objects/Invoice_Date_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Inc_Leave_Date__c</fullName>
        <label>Inc Leave Date</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inc_Leave_sign__c</fullName>
        <label>Inc Leave sign</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inc_Month_Leave_Date__c</fullName>
        <label>Inc Month Leave Date</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inc_Month_Leave_sign__c</fullName>
        <label>Inc Month Leave sign</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inc_Month_Start_Date__c</fullName>
        <label>Inc Month Start Date</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inc_Month_Start_Sign__c</fullName>
        <label>Inc Month Start Sign</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inc_Start_Date__c</fullName>
        <label>Inc Start Date</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inc_Start_Sign__c</fullName>
        <label>Inc Start Sign</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mth_Gen_Day__c</fullName>
        <label>Mth Gen Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mth_Inv_Day__c</fullName>
        <label>Mth Inv Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T1_Gen_Day__c</fullName>
        <label>T1 Gen Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T1_Gen_Mth__c</fullName>
        <label>T1 Gen Mth</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T1_Inv_Day__c</fullName>
        <label>T1 Inv Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T1_Inv_Mth__c</fullName>
        <label>T1 Inv Mth</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Gen_Day__c</fullName>
        <label>T2 Gen Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2_Gen_Mth__c</fullName>
        <label>T2 Gen Mth</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T2_Inv_Day__c</fullName>
        <label>T2 Inv Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T2_Inv_Mth__c</fullName>
        <label>T2 Inv Mth</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T3_Gen_Day__c</fullName>
        <label>T3 Gen Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T3_Gen_Mth__c</fullName>
        <label>T3 Gen Mth</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T3_Inv_Day__c</fullName>
        <label>T3 Inv Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T3_Inv_Mth__c</fullName>
        <label>T3 Inv Mth</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Invoice Date Settings</label>
</CustomObject>